Toast position fixes to account for position fixed limitations on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -639,6 +639,7 @@ p {
 	box-shadow: inset 0 0 0 var(--button-boxshadow-width, 2px) var(--button-boxshadow-colour);
 	text-decoration: none;
 	user-select: none;
+    -webkit-user-select: none;
 	-webkit-tap-highlight-color: transparent;
 	/* ↓ Removes blue highlight on mobile */
 	transition:
@@ -1061,8 +1062,9 @@ main>.wrapper {
 	display: grid;
 	grid-template-columns:
 		var(--wrapper-left-margin) var(--aside-left-width) var(--aside-gap-left) var(--content-width) var(--aside-gap-right) var(--aside-right-width) var(--wrapper-right-margin);
-	grid-template-rows: 1fr;
+	grid-template-rows: 0px 1fr;
 	grid-template-areas:
+        ". toasts toasts toasts toasts toasts ."
 		". left-aside . content . right-aside .";
 	justify-content: center;
 	position: relative;
@@ -1075,9 +1077,10 @@ main.home>.wrapper {
 
 main.big-seven>.wrapper {
 	--aside-gap-left: var(--space-4xl);
-	grid-template-rows: auto 1fr;
+	grid-template-rows: auto 0px 1fr;
 	grid-template-areas:
 		"toolbar toolbar toolbar toolbar toolbar toolbar toolbar"
+        ". toasts toasts toasts toasts toasts ."
 		". left-aside . content . right-aside .";
 }
 
@@ -1354,6 +1357,7 @@ main:not([data-report="inactive"]) [data-restrict-report="inactive"] {
 
 nav a {
 	user-select: none;
+    -webkit-user-select: none;
 }
 
 
@@ -1457,6 +1461,7 @@ form label:has(input[type="checkbox"]) {
 	font-weight: 400;
 	cursor: pointer;
 	user-select: none;
+    -webkit-user-select: none;
 	position: relative;
 	transition:
 		border-color var(--transition-linear-fast),
@@ -2417,6 +2422,7 @@ summary {
 	position: relative;
 	cursor: pointer;
 	user-select: none;
+    -webkit-user-select: none;
 	font-weight: 700;
 	transition: background-color var(--transition-linear-fast), padding var(--transition-ease-medium);
 }
